# mc-server-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  compose.yaml
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  docker-ci.yml  frontend-ci.yml
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_create_users_and_refresh_tokens_tables.py
api/src/app/: __init__.py  main.py
api/src/app/api/auth/: routes.py
api/src/app/core/: config.py  database.py  security.py
api/src/app/models/: user.py
api/src/app/schemas/: auth.py
api/src/app/services/: auth.py
api/tests/: __init__.py  conftest.py  test_auth.py  test_main.py  test_security.py
docs/: ARCHITECTURE.ja.md  ARCHITECTURE.md  CODING_STANDARDS.ja.md  CODING_STANDARDS.md  DEVELOPMENT.ja.md  DEVELOPMENT.md  IMPLEMENTATION_GAP_ANALYSIS.ja.md  IMPLEMENTATION_GAP_ANALYSIS.md  IMPLEMENTATION_GUIDE.ja.md  IMPLEMENTATION_GUIDE.md  INDEX.ja.md  INDEX.md  PHILOSOPHY.ja.md  PHILOSOPHY.md  WORKFLOW.ja.md  WORKFLOW.md
scripts/: setup-hooks.sh
ui/: .dockerignore  .eslintrc.js  .eslintrc.json  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
ui/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
